# pgit

./: .gitignore  Cargo.toml  README.md  build.rs
action/: Dockerfile  README.md  action.yml  entrypoint.sh
examples/: workflow-advanced.yml  workflow-basic.yml  workflow-ml.yml
hooks/: install.sh  pre-commit
migrations/: V1__initial.sql
src/: cli.rs  error.rs  main.rs  statistical_manifest.proto
src/engine/: stats.rs
src/storage/: mod.rs  remote.rs
tests/: stats_tests.rs
